# LangChain-RAG-Chatbot-Research-Paper-Q-A

./: README.md  app.py  pyproject.toml  requirements.txt
backend/: chain.py  loader.py  memory.py
chroma_db/: chroma.sqlite3
utils/: prompts.py
