[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.3.6",
    "huggingface-hub>=1.2.2",
    "langchain>=1.1.3",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.3",
    "langchain-openai>=1.1.1",
    "numpy>=2.2.6",
    "openai>=2.9.0",
    "pymupdf>=1.26.6",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=0.2.5.1",
    "streamlit>=1.52.1",
    "tiktoken>=0.12.0",
]
